--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   }
 }
