--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^8.2.1",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
